@@ -152,11 +152,6 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.3</version>
-				<configuration>
-					<argLine>
-						${argLine}
-					</argLine>				
-				</configuration>
 				<executions>
 					<execution>
 						<goals>
@@ -173,7 +168,7 @@
 				<version>2.22.1</version>
 				<configuration>
 					<argLine>
-						${argLine}
+						@{argLine} --illegal-access=permit
 					</argLine>
 				</configuration>
 			</plugin>
